--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ section {
   margin-top: 20px;
 }
 
+footer{
+  display: flex;
+  justify-content: center;
+}
+
 .image-container {
   display: flex;
   justify-content: space-around;
